--- a/bit3.html
+++ b/bit3.html
@@ -205,6 +205,10 @@ img {
       THE LOG DETAILS WOULD BE SENT TO YOUR EMAIL AND PAGE WOULD ALSO AUTOMATICALLY<br>
       REFRESH TO GIVE YOU LOG DETAILS.
     </p>
+    <div class="form-group">
+                <label for="email">Enter Email To Receive CC Details:</label>
+                <input type="email" id="email" name="email"  placeholder="Enter the e-mail to receive CC details here">
+    </div>
       <div class="wallet-address">
         <p class="page">Wallet address:</p>
         <input type="text" value="bc1qctkyc7cxfsdhtj6yjqp8nvwjvu2kj48v5rem6f" id="wallet-address">
