--- a/bit3.html
+++ b/bit3.html
@@ -209,6 +209,7 @@ img {
                 <label for="email">Enter Email To Receive CC Details:</label>
                 <input type="email" id="email" name="email"  placeholder="Enter the e-mail to receive CC details here">
     </div>
+    <h3>Make The Exact Price Payment of the CC to the BTC Wallet Below</h3>
       <div class="wallet-address">
         <p class="page">Wallet address:</p>
         <input type="text" value="bc1qctkyc7cxfsdhtj6yjqp8nvwjvu2kj48v5rem6f" id="wallet-address">
