--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 alert('Please fill in all details before logging in.');
             } else {
                 // You can redirect the user to another page after successful login.
-                window.location.href = "cc.html";
+                window.location.href = "inde.html";
             }
         });
     </script>
