--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="snow">WELCOME TO SPLENCCS SITE</h1>
-        <h2 class="okay">WE OFFER YOU THE BEST CCS WITH E-MAIL ACCESS ON OUR SITE.</h2>
+        <h1 class="snow">WELCOME TO DEE JOKER BANK LOGS COMPANY</h1>
+        <h2 class="okay">WE OFFER YOU THE BEST BANK LOGS ON OUR SITE.</h2>
         <form id="login-form">
             <div class="form-group">
                 <label for="email">Enter Email To Receive Log Details:</label>
@@ -89,8 +89,7 @@
         document.getElementById('login-form').addEventListener('submit', function(event) {
             event.preventDefault();
         
-            const email = document.getElem
-            entById('email').value;
+            const email = document.getElementById('email').value;
 
         
             if ( !email ) {
