--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="snow">WELCOME TO DEE JOKER BANK LOGS COMPANY</h1>
-        <h2 class="okay">WE OFFER YOU THE BEST BANK LOGS ON OUR SITE.</h2>
+        <h1 class="snow">WELCOME TO SPLENCCS SITE</h1>
+        <h2 class="okay">WE OFFER YOU THE BEST CCS ON OUR SITE.</h2>
         <form id="login-form">
             <div class="form-group">
-                <label for="email">Enter Email To Receive Log Details:</label>
+                <label for="email">Enter Email To Receive CC Details:</label>
                 <input type="email" id="email" name="email" required>
             </div>
             <button type="submit" id="login-btn">SHOP NOW</button>
