--- a/inde.html
+++ b/inde.html
@@ -59,6 +59,18 @@
       transition: background-color 0.2s ease;
       margin-bottom: 5px;
     }
+    .purchas-btn {
+      display: block;
+      width: 100px;
+      padding: 10px;
+      background-color: #ff5e00;
+      color: #fff;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.2s ease;
+      margin-bottom: 5px;
+    }
 
     .purchase-btn:hover {
       background-color: #0056b3;
@@ -79,7 +91,7 @@
     Number: 5445 555**** | CVV: 785 | Price: $30 | Card Limit: $880/Month |
 Address: Suffolk Grove 3203 | Country: Qatar</p>
 <p class="price">$30</p>
-      <a href="bit3.html" class="purchase-btn">Purchase</a>
+      <a href="#" class="purchas-btn">SOLD</a>
     </div>
     <div class="iphone-card">
         <h4 class="iphone-name">CARD TYPE</h4>
@@ -106,7 +118,7 @@ Address: Maryland 217 St. | Country: United States</p>
     Number: 4159 750**** | CVV: 785 | Price: $45 | Card Limit: $1390/Month |
 Address: Virginia Boks 213 | Country: United States</p>
 <p class="price">$45</p>
-      <a href="bit3.html" class="purchase-btn">Purchase</a>
+      <a href="#" class="purchas-btn">SOLD</a>
       </div>
       <div class="iphone-card">
         <h4 class="iphone-name">CARD TYPE</h4>
